--- a/appearance.css
+++ b/appearance.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: Helvetica, Arial, sans-serif;
     background: #fbfbfb;
     color: #080000;
-    font-size: 12px;
+    font-size: 20px;
 }
 
 figcaption {
