--- a/columnate.css
+++ b/columnate.css
@@ -1,17 +1,11 @@
-html {
-	height: 100%;
-	/*width: min-content;*/
-
-	padding: 0;
-	margin: 0;
+body {
+	max-width: 30em;
+	margin: auto;
+	padding: 64px;
 }
 
-body {
-	height: 100%;
-	width: fit-content;
-
-	margin: 0;
-	padding: 0;
+body > h1 {
+	font-size: 1.6em;
 }
 
 figure {
