--- a/appearance.css
+++ b/appearance.css
@@ -3,8 +3,43 @@ body {
     background: #fbfbfb;
     color: #080000;
     font-size: 20px;
+    max-width: 30em;
+	margin: auto;
+	padding: 64px;
+}
+
+body > h1 {
+	font-size: 1.6em;
 }
 
 figcaption {
     color: #777;
+}
+
+figure {
+	padding: 0;
+	margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p, figcaption {
+	padding-top: 16px;
+	padding-left: 16px;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	margin-inline-start: 0;
+	margin-inline-end: 0;
+}
+
+p, figcaption {
+	line-height: 1.5em;
+}
+
+img {
+	height: auto !important;
+	max-width: 100%;
+}
+
+iframe {
+	width: auto;
+	height: auto;
 }
